--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="js/d3.min.js"></script>
 		<script src="js/dygraph-combined.js"></script>
 		<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
 		<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
