edited for review

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			<div class="slides">
 				<section>
 					<h1>JSM Deck</h1>
-					<h2>*Working Draft*</h2>	
+					<h2>*Working Draft*</h2>
+					<h3>Right Arrow-></h3>	
 				</section>
 				<section>
 					<p>There is a lot of missing data, even for well established indicators/indexes</p>
