--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<p>Also very costly to create</p>
 				</section>
 				<section>
-					<p>Literacy rates of 15-24 years old, both sexes, percentage</p>
+					<p>Gender Parity Index in primary level enrolment</p>
 					<div id="coord"></div>
 					<script src="js/parallel_coord.js"></script>
 					<p>MDG Indicators only capture if a nation is succeeding or failing, not suggest policy interventions that may help or where to help</p>
