--- a/index.html
+++ b/index.html
@@ -486,11 +486,15 @@
 					<p>Also very costly to create</p>
 				</section>
 				<section data-state="header35">
-					<p>Gender Parity Index in primary level enrolment</p>
+					<h5>Gender Parity Index in primary level enrolment</h5>
 					<div id="coord"></div>
 					<script src="js/parallel_coord.js"></script>
-					<p>We can see the upward trend of primary level enrolment</p>
-					<p>Only capture if a nation is succeeding or failing, not suggest policy interventions that may help or where to help</p>
+				</section>
+				<section data-state="header35">
+					<ul>
+						<li>We can see the upward trend of primary level enrolment</li>
+						<li>Only capture if a nation is succeeding or failing, not suggest policy interventions that may help or where to help</li>
+					</ul>
 				</section>
 				<section data-state="header35">
 					<p>Gender Parity Index in primary level enrolment</p>
