--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Target 1A: Halve proportion of people living on less than $1.25/day"; }</style>
+					.target1a header.left:after { content: "Target 1A: Halve proportion of people living on less than $1.25/day"; }</style>
 					<ul>
 						<li>Although the number of people living in extreme poverty globally fell by 1 billion people, the world’s extremely poor people are distributed unevenly across two regions: South Asia and Sub Saharan Africa.</li>
 						<li>Gender Inequality must continue to decrease so that women do not face a greater risk of living in poverty</li>
@@ -702,14 +702,15 @@
 					<h4>Hannah Cho</h4>
 				</section>
 				<section data-state="case3_under">
-				<style>.case3_under body{
+				<style>.case3_under 
+					body{
 					background-image: url('img/propUND_opaque.png'); 
 					height: 100%; 
 					width: 100%;
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 3:"; }</style>
+					.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<ul>
 						<li>Percentage of Underweight Children Under Age 5 in Mexico/Central American Region of Developing Economies as defined by World Economic Situation and Prospects 2012</li>
 						<li>Honduras has highest drop in percentage</li>
@@ -736,7 +737,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 3:"; }</style>
+					.case3_stunt header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<ul>
 						<li>Prevalence of stunting among children under age 5 in Mexico/Central America Region</li>
 						<li>El Salvador has highest drop in percentage</li>
@@ -762,7 +763,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 3:"; }</style>
+					.case3_tub header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<ul>
 						<li>Incidence of Tuberculosis per 100,000 people for Mexico/Central America Region</li>
 						<li>Honduras has greatest drop in incidence</li>
@@ -788,7 +789,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 3:"; }</style>
+					.case3_mat header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<ul>
 						<li>Maternal mortality ratio per 100,000 live births</li>
 						<li>Honduras has the steepest drop from 1990 to 2000</li>
@@ -820,7 +821,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_mmrgeo header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Maternal mortality rate (MMR) in the DPRK (DPRK 2008 Census, Table 18)</h3>
 					<ul>
 						<li>MMR = (number of maternal deaths/ number of live births)*100,000</li>
@@ -850,7 +851,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_perhos header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Percentage of maternal deaths at hospital (DPRK 2008 Census, table 18)</h3>
 					<ul>
 						<li>Percentage = (number of maternal deaths at hospital/ number of maternal deaths)*100</li>
@@ -878,7 +879,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_topnk header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Implications for policymakers: quality of facilities, transportation, and weather</h3>
 					<ul>
 						<li>Ryanggang is mountainous. Difficult access to the hospitals.</li>
@@ -916,7 +917,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_stu header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Global stunting in children in the DPRK (NNS 2012, Table 6.2)</h3>
 					<ul>
 						<li>Ryanggang has the highest prevalence.</li>
@@ -951,7 +952,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_was header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Global wasting in children in the DPRK (NNS 2012, Table 6.3)</h3>
 					<ul>
 						<li>Ryanggang has the highest prevalence.</li>
@@ -976,7 +977,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_force header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Policy implications</h3>
 					<ul>
 						<li>Jagang and Ryanggang have the highest prevalence of malnutrition.</li>
@@ -1003,7 +1004,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 4:"; }</style>
+					.case4_scale header.left:after { content: "Case Example Data Visualization 4:"; }</style>
 					<h3>Policy implications</h3>
 					<ul>
 						<li>Each type of malnutrition takes up a considerable amount of the landmass in each province.</li>
@@ -1036,7 +1037,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 5:"; }</style>
+					.case5_hist header.left:after { content: "Case Example Data Visualization 5:"; }</style>
 				</section>
 				<section data-state="case5_hist">
 					<img src="img/intHIST.jpg" width="100%">
@@ -1049,7 +1050,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 					} 
-					header.left:after { content: "Case Example Data Visualization 5:"; }</style>
+					.case5_leaflet header.left:after { content: "Case Example Data Visualization 5:"; }</style>
 				</section>
 				<section data-state="case5_leaflet">
 					<img src="img/worldMAL.jpg" width="100%">
