fixed title for ariel's slides

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
 				</section>
 				<section data-state="hiv">
 				<style>.hiv header.left:after { content: "HIV/AIDS"; }</style>
-					<img src="img/combatHIVa.jpg" width="48%">
-					<img src="img/combatHIVb.jpg" width="48%">
+					<h5>The number of people newly infected with HIV continues to decline</h5>
+					<img src="img/combatHIV_full.png", width="100%">
 					<aside class="notes">
 						<ul>
 							<li>One of the major goals of the UN has been to combat the major diseases impacting the global community. At the time when the MDGs were drafted up, at 1990, HIV/AIDS, malaria, and tuberculosis were considered the most urgent of issues to be addressed.</li>
@@ -346,8 +346,7 @@
 				</section>
 				<section data-state="malaria">
 				<style>.malaria header.left:after { content: "Malaria"; }</style>
-					<img src="img/combatMALa.jpg" width="26%">
-					<img src="img/combatMALb.jpg" width="70%">
+					<img src="img/combatMAL_full.png" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Another disease that has been a part of the UN agenda is malaria.</li>
@@ -359,7 +358,7 @@
 				</section>
 				<section data-state="tuberculosis">
 				<style>.tuberculosis header.left:after { content: "Tuberculosis"; }</style>
-					<img src="img/combatTUB.jpg" width="100%">
+					<img src="img/combatTUB_full.png" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Tuberculosis is the third and final disease that was officially a part of the MDG goals.</li>
@@ -371,7 +370,7 @@
 					</aside>
 				</section>
 				<section data-state="tuberculosis">
-					<img src="img/combatTUB2.jpg">
+					<img src="img/combatTUB2_full.png", width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Still, in developing regions, where TB poses the highest threat, more than 85% of newly diagnosed cases have been successfully treated for 6 consecutive years, as shown in light blue in the graph</li>
@@ -383,8 +382,7 @@
 				</section>
 				<section data-state="envSus">
 				<style>.envSus header.left:after { content: "Environmental Sustainability"; }</style>
-					<img src="img/envSUSa.png" width="48%">
-					<img src="img/envSUSb.jpg" width="48%">
+					<img src="img/envSUS_full.png" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>The UN has also tried to attain a certain level of environmental sustainability over the past couple decades.</li>
@@ -396,7 +394,7 @@
 					</aside>
 				</section>
 				<section data-state="envSus">
-				<img src="img/envBIO.jpg" width="50%">
+				<img src="img/envBIO_full.png" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Loss of biodiversity continues to be a struggle for the world’s species.</li>
@@ -406,7 +404,7 @@
 					</aside>
 				</section>
 				<section data-state="envSus">
-					<img src="img/envWAT.jpg" width="50%">
+					<img src="img/envWAT_full.png" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Although there have been developments regarding basic sanitation and use of improved sanitation facilities, huge disparities exist between the rural and urban communities.</li>
@@ -615,7 +613,8 @@
 					<h4>Ariel Lee</h4>
 				</section>
 				<section data-state="case2">
-					<img src="img/matMOR.jpg" width="100%">
+					<h6>Maternal Mortality Ratio per 100,000 live births of Developing and Developed Countries</h6>
+					<img src="img/matMOR.jpg" width="75%">
 					<aside class="notes">
 						<ul>
 							<li>Maternal mortality was chosen as an indicator for the health of a set of vulnerable women.</li>
@@ -633,6 +632,7 @@
 					</aside>
 				</section>
 				<section data-state="case2">
+					<h6>Heatmap of Maternal Mortality in Developing and Developed Countries</h6>
 					<img src="img/matMORheat.jpg" width="100%">
 					<aside class="notes">
 						<ul>
@@ -643,7 +643,8 @@
 					</aside>
 				</section>
 				<section data-state="case2">
-					<img src="img/genPAR_full.png" width="100%">
+					<h6>Gender Parity Index in secondary level enrolment in Developing and Developed Countries</h6>
+					<img src="img/genPAR_full.png" width="70%">
 					<aside class="notes">
 						<ul>
 							<li>The second indicator chosen was gender parity index in secondary level enrolment.</li>
@@ -658,7 +659,8 @@
 					</aside>
 				</section>
 				<section data-state="case2">
-					<img src="img/propWOM_full.png">
+					<h6>Proportion of Seats Held by Women in National Parliament in Developing and Developed Countries</h6>
+					<img src="img/propWOM_full.png", width="65%">
 					<aside class="notes">
 						<ul>
 							<li>Proportion of seats held by women in national parliament was chosen because political power is considered the highest level of women’s empowerment in the UN,</li>
