added newest changes from hannah

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<style>.devGoal header.left:after { content: "Development Goal"; }</style>
 					<h1>Poverty and Hunger</h1>
 				</section>
-				<section data-state="target1a">
+<!-- 				<section data-state="target1a">
 				<style>.target1a body {
 					background-image: url('img/target1a_opaque.png'); 
 					height: 100%; 
@@ -202,19 +202,19 @@
 							<li>(Go over slides and figure)</li>
 						</ul>
 					</aside>
-				</section>
+				</section> -->
 				<section data-state="target1a">
-					<img src="img/target1a.jpg" width="100%">
+				<style>.target1a header.left:after { content: "Target 1A: Halve proportion of people living on less than $1.25/day"; }</style>
+					<img src="img/target1a_new.png" width="100%">
 					<aside class="notes">
 						<ul>
-							<li>First, it’s about reducing poverty and hunger across the globe.</li>
-							<li>Understanding the characteristics of the world’s poorest people and the reasons for their deprivation is crucial in determining how best to target and eradicate poverty.</li>
-							<li>Greater efforts are needed to produce high quality poverty and gender statistics if we are to monitor progress effectively in eradicating extreme poverty for all people everywhere.</li>
-							<li>(Go over slides and figure)</li>
+							<li>The UN MDG of Poverty and Hunger had three different targets. The first target was to halve the proportion of people living on less than $1.25/day, which is the UN’s classification of extreme poverty.</li>
+							<li>Although the number of people living in extreme poverty globally fell by 1 billion people, the world’s extremely poor people are distributed unevenly across two regions: South Asia and Sub Saharan Africa. This can be seen in the data visualization on the left, with Sub-Saharan Africa showing the least progress.</li>
+							<li>Additionally, women face a greater risk of living in poverty. As the data visualization on the right shows, in 41 countries women are more likely to live in poor households than men. This gender inequality in poverty needs to decrease.</li>
 						</ul>
 					</aside>
 				</section>
-				<section data-state="target1b">
+<!-- 				<section data-state="target1b">
 				<style>.target1b body {
 					background-image: url('img/target1b_opaque.png'); 
 					height: 100%; 
@@ -222,17 +222,25 @@
 					background-repeat: no-repeat;
 					background-position: center;
 				}
-				header.left:after { content: "Target 1B: Full and productive employment for all people"; }</style>
+				.target1b header.left:after { content: "Target 1B: Full and productive employment for all people"; }</style>
 					<ul>
 						<li>There is a lack of employment opportunities in comparison to the growing labor force. </li>
 						<li>Youth, especially young women, are disproportionately affected by the lack of employment opportunities</li>
 						<li>Although the proportion of workers living in extreme poverty has largely decreased, nearly half the population of employed people are working in vulnerable conditions.</li>
 					</ul>
-				</section>
+				</section> -->
 				<section data-state="target1b">
-					<img src="img/target1b.jpg" width="100%">
+				<style>.target1b header.left:after { content: "Target 1B: Full and productive employment for all people"; }</style>
+					<img src="img/target1b_new.png" width="100%">
+					<aside class="notes">
+						<ul>
+							<li>The second target was to gain full and productive employment for all people.</li>
+							<li>However, the data visualization on the left shows there is a lack of employment opportunities in comparison to the growing labor force. Young women especially are disproportionately affected by this problem. Again, we see this issue of gender inequality in relation to poverty.</li>
+							<li>Although the proportion of workers living in extreme poverty has largely decreased, nearly half the population of employed people are still working in vulnerable conditions, as shown in the data visualization on the right.</li>
+						</ul>
+					</aside>
 				</section>
-				<section data-state="target1c">
+<!-- 				<section data-state="target1c">
 				<style>.target1c header.left:after { content: "Target 1C: Halve proportion of people suffering from hunger"; }</style>
 					<ul>
 						<li>Differences in hunger prevalences continue to exist across regions</li>
@@ -241,6 +249,19 @@
 						<li>Sub-Saharan Africa and Southern Asia account for nearly 90 percent of underweight children in the world.</li>
 						<li>Overall, much progress has been made to decrease the proportion of people living in extreme poverty and hunger. However, the world still faces many obstacles and challenges in order to reach the goal of complete eradication extreme poverty and hunger. </li>
 					</ul>
+				</section> -->
+				<section data-state="target1c">
+				<style>.target1c header.left:after { content: "Target 1C: Halve proportion of people suffering from hunger"; }</style>
+					<img src="img/target1c_new.png" width="100%">
+					<aside class="notes">
+						<ul>
+							<li>The third target in relation to poverty and hunger was to halve the proportion of people suffering from hunger by 2015.</li>
+							<li>Much progress has been made. As seen in the data visualization to the left, the proportion of undernourished people in developing regions has decreased by nearly half.</li>
+							<li>However, differences in hunger prevalences continue to exist across regions. The data visualization in the middle portrays that the pace of reduction in caribbean, oceania, southern asia, and sub-saharan regions has been too slow to reach target.</li>
+							<li>Additionally, the prevalence of underweight children is declining, but the rate is too slow for all regions, specifically Sub-saharan africa, Southern Asia, and Oceania, to reach target.</li>
+							<li>Overall, much progress has been made to decrease the proportion of people living in extreme poverty and hunger. However, in order to achieve the goal of complete eradication, the world faces many obstacles and challenges, such as removing the gender inequality that exists in the issue of poverty and hunger and focusing on regions such as Sub-saharan africa and southern asia.</li>
+						</ul>
+					</aside>
 				</section>
 				<section data-state="devGoal">
 					<h1>Gender Inequality</h1>
@@ -253,7 +274,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 				}
-				header.left:after { content: "Target: Eliminate gender disparity in all levels of education by 2015"; }</style>
+				.targetgender header.left:after { content: "Target: Eliminate gender disparity in all levels of education by 2015"; }</style>
 					<ul>
 						<li>Women are less likely to participate in the labour force than men</li>
 						<li>Especially troubled in Northern Africa, Southern Asia, and Western Asia.</li>
@@ -276,7 +297,7 @@
 					background-repeat: no-repeat;
 					background-position: center;
 				}
-				header.left:after { content: "Target: Reduce Child mortality by two-thirds by 2015"; }</style>
+				.targetchild header.left:after { content: "Target: Reduce Child mortality by two-thirds by 2015"; }</style>
 					<ul>
 						<li>Substantial progress has been made in reducing child mortality, target is not acheived.</li>
 						<li>Given current trend, it will take another ten years for the target to be reached.</li>
